# flashmatchdata_petastorm

./: .gitignore  .gitmodules  CLAUDE.md  README.md  config_inference_mlp_hdf5_data.yaml  config_inference_siren_hdf5_data.yaml  config_mlp_hdf5_data.yaml  config_siren_hdf5_data.yaml  config_siren_hdf5_mccorsika_multigpu.yaml  config_siren_hdf5_mccorsika_multigpu2.yaml  config_trace_mlp_model.yaml  config_trace_siren_model.yaml  data_studies.py  example_hdf5_usage.py  flashmatch_hdf5_writer.py  flashmatchdata.py  inference_validation_test_dataset.txt  lightmodelnet.py  make_flashmatch_training_data.py  make_siren_trace.py  model_inference_analysis.py  plot_inference_outputs.py  plot_pesum_variations.py  pytorch_reader_test.py  run_siren_inference.py  run_train_siren_hdf5_data_v2.sh  run_train_siren_hdf5_extbnb_multigpu.sh  run_train_siren_hdf5_mccorsika_multigpu.sh  run_train_siren_hdf5_mccorsika_multigpu2.sh  sa_table.py  setenv.sh  setenv_flashmatchdata.sh  submit_train_mlp_p1cmp075.sh  submit_train_siren_hdf5_data_v2.sh  submit_train_siren_hdf5_mccorsika_multigpu.sh  submit_train_siren_hdf5_mccorsika_multigpu2.sh  test_flashmatch_code.py  train.py  train_lightmodel.py  train_mlp.py  (+5 more)
analysis/: README.md
arxiv/: README.md  pytorch_reader_test.py  sa_table.py  spark_query.py  train.py  train_mlp.py  train_siren.py
data_prep/: CMakeLists.txt  README.md  debug_dataloader.py  debug_shapes.py  flashmatch_mixup.py  read_flashmatch_hdf5.py  test_hdf5_dataloader.py  test_hdf5_dataset.py  test_sinkhorn_python.py
data_prep/cmake/: Config.cmake.in  flashmatch_dataprep.pc.in
data_prep/config/: flash_matching.yaml  output_format.yaml  quality_cuts.yaml
data_prep/include/: CRTMatcher.h  CosmicRecoInput.h  CosmicTrackSelector.h  DataStructures.h  FlashMatchHDF5Output.h  FlashMatchOutputData.h  FlashTrackMatcher.h  LarliteDataInterface.h  ModelInputInterface.h  PMTPositions.h  PrepareVoxelOutput.h  SirenTorchModel.h  TruthFlashTrackMatcher.h  UBFlashSinkDiv.h  UnbalancedSinkhornDivergence.h
data_prep/python/: hdf5_converter.py
data_prep/scripts/: run_cosmic_reconstruction.sh  setup_environment.sh
data_prep/src/: CMakeLists.txt  CRTMatcher.cxx  CosmicRecoInput.cxx  CosmicTrackSelector.cxx  FlashMatchHDF5Output.cxx  FlashMatchOutputData.cxx  FlashTrackMatcher.cxx  LarliteDataInterface.cxx  ModelInputInterface.cxx  PMTPositions.cxx  PrepareVoxelOutput.cxx  SirenTorchModel.cxx  TruthFlashTrackMatcher.cxx  UBFlashSinkDiv.cxx  UnbalancedSinkhornDivergence.cxx  main.cxx  make_mc_training_data.cxx  test_epsilon_schedule.cxx  test_sinkhorn.cxx  test_siren_model_interface.cxx
data_prep/studies/: calculate_means_vars.py  clean_files.py  estimate_initial_ly.py  example_data_distributions.md  make_ly_study_plots.py  run_gridjob_estimate_ly.sh  submit_estimate_ly.sh
data_prep/tests/: GNUmakefile  README.md  build_test.sh  test_model_input_interface.cxx
data_prep/tuftscluster/: README.md  check_files.py  inference_sparse_ssnet_uboone_corsika.py  notes_on_processing_mcc9_v13_corsika.md  run_gridjob_dataprep.sh  run_gridjob_hdf5_dataprep.sh  run_gridjob_hdf5_dataprep_noanode.sh  run_gridjob_hdf5_mcprep_corsika_noanode.sh  submit_run_gridjob_datapre.sh  submit_run_gridjob_dataprep.sh  submit_run_gridjob_mcprep_corsika.sh  test_grid_script.sh
data_prep/visualizations/: README.md  compare_match_flash_predictions.py  cosmic_dashboard.py  hdf5_match_dashboard.py  match_dashboard.py  plot_flash_matches.py  requirements.txt
flashmatchnet/data/: augment.py  flashmatch_hdf5_reader.py  flashmatch_mixup.py  petastormschema.py  production.py  read_flashmatch_hdf5.py  reader.py
flashmatchnet/losses/: loss_poisson_emd.py  loss_poisson_emd_lm.py  loss_unbalanced_sinkhorn.py  smoothness_regularization.py
flashmatchnet/model/: backbone_resunetme.py  flashmatchMLP.py  flashmatchnet.py  lightmodel_siren.py
flashmatchnet/utils/: coord_and_embed_functions.py  load_model.py  multigpu.py  pmtpos.py  pmtutils.py  prepare_model_input.py  reduction_functions.py  root_vis.py  trackingmetrics.py
mcstudy_prep/: checkjobs.py  nue_corsika_input_filesets.txt  run_flashmatch_data_mcc9_v13_bnbnue_corsika.sh  submit_make_flashmatch_data.sh
notes/: result_siren_with_mixup_on_mccoriska.md
prep/: prepare_nue_corsika_filelists.py  run_flashmatch_data_mcc9_v13_bnbnue_corsika.sh  run_flashmatch_data_mcc9_v13_bnbnue_corsika_validation.sh  submit_make_flashmatch_data.sh  submit_nue_corsika_validation.sh
studies/fvis_scan/: plot_scan_output.py  scan_model_fvis.py
